tests/purs/warning/Kind-UnusedImport.out
Error found:
in module [33mMain[0m
at tests/purs/warning/Kind-UnusedImport.purs:6:1 - 6:35 (line 6, column 1 - line 6, column 35)

  The import of [33mType.RowList[0m is redundant


See https://github.com/purescript/documentation/blob/master/errors/UnusedImport.md for more information,
or to contribute content related to this error.

